# quant-sage

./: .gitignore  day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  pricer_service.py  pricer_service2.py  pyproject.toml  util.py
jsonl/: fine_tune_train.jsonl
jsonl/batches/: 0_500.jsonl  10000_10500.jsonl  1000_1500.jsonl  10500_11000.jsonl  11000_11500.jsonl  11500_12000.jsonl  12000_12500.jsonl  12500_13000.jsonl  13000_13338.jsonl  1500_2000.jsonl  2000_2500.jsonl  2500_3000.jsonl  3000_3500.jsonl  3500_4000.jsonl  4000_4500.jsonl  4500_5000.jsonl  5000_5500.jsonl  500_1000.jsonl  5500_6000.jsonl  6000_6500.jsonl  6500_7000.jsonl  7000_7500.jsonl  7500_8000.jsonl  8000_8500.jsonl  8500_9000.jsonl  9000_9500.jsonl  9500_10000.jsonl
jsonl/batches-condensed/: 0_500.jsonl  10000_10500.jsonl  1000_1500.jsonl  10500_11000.jsonl  11000_11500.jsonl  11500_12000.jsonl  12000_12500.jsonl  12500_13000.jsonl  13000_13336.jsonl  1500_2000.jsonl  2000_2500.jsonl  2500_3000.jsonl  3000_3500.jsonl  3500_4000.jsonl  4000_4500.jsonl  4500_5000.jsonl  5000_5500.jsonl  500_1000.jsonl  5500_6000.jsonl  6000_6500.jsonl  6500_7000.jsonl  7000_7500.jsonl  7500_8000.jsonl  8000_8500.jsonl  8500_9000.jsonl  9000_9500.jsonl  9500_10000.jsonl
jsonl/fine-tune/: fine_tune_train.jsonl  fine_tune_validation.jsonl
jsonl/fine-tune-condensed/: fine_tune_train.jsonl  fine_tune_validation.jsonl
jsonl/output-condensed/: 0_500.jsonl  10000_10500.jsonl  1000_1500.jsonl  10500_11000.jsonl  11000_11500.jsonl  11500_12000.jsonl  12000_12500.jsonl  12500_13000.jsonl  (+19 more)
pricer/: evaluator.py
(+27 files in other folders)
