[project]
name = "finora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "datasets>=4.8.4",
    "gdeltdoc>=1.12.0",
    "groq>=1.2.0",
    "huggingface-hub>=1.11.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "litellm>=1.83.12",
    "matplotlib>=3.10.8",
    "modal>=1.4.2",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pinecone>=8.1.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "yfinance>=1.3.0",
]
